Fixed z-index conflict with shift8-portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 
 .fn-header a {
     text-decoration:none;
+    outline: 0;
 }
 
 .fn-container {
@@ -68,6 +69,7 @@
 .fn-secondary-nav a {
   display: inline-block;
   text-transform: uppercase;
+  outline:0;
 }
 .fn-primary-nav-trigger {
   position: absolute;
@@ -141,7 +143,7 @@
   height: 100%;
   width: 100%;
   margin:0 !important;
-  z-index: 2;
+  z-index: 25;
   text-align: center;
   padding: 80px 0 !important;
   -webkit-backface-visibility: hidden !important;
@@ -182,6 +184,7 @@
     margin: auto;
     text-transform: uppercase;
     text-decoration: none !important;
+    outline:0;
 }
 .fn-primary-nav.is-visible {
   -webkit-transform: translateY(0) !important;
@@ -204,6 +207,59 @@
   margin: 2em 0;
 }
 
+/* Dropdown menu */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    margin:0 !important;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+/*    padding: 12px 16px; */
+    text-decoration: none;
+    display: block;
+    font-size:11px !important;
+    padding:10px 0 10px 0 !important;
+    letter-spacing: 1px !important;
+    border-bottom:1px solid #dddddd !important;
+    color: #666666 !important;
+    outline:0;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover { background-color: #f1f1f1; }
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
 /* responsive */
 @media only screen and (min-width: 980px) {
   .fn-header {
@@ -211,6 +267,7 @@
     box-shadow: none;
   }
 }
+
 @media only screen and (min-width: 1170px) {
   .fn-header {
     -webkit-transition: background-color 0.3s;
